--- a/Resources/02_EstimatedLoFGenes/comparison.ipynb
+++ b/Resources/02_EstimatedLoFGenes/comparison.ipynb
@@ -12,7 +12,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def extract_elof_genes(row):\n",
+    "    if (row['pLI'] > 0.9\n",
+    "            and row['oe_lof_upper'] < 0.35\n",
+    "            and row['pHaplo'] > 0.86):\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False \n",
+    "\n",
+    "def extract_g2pLoF_genes(x):\n",
+    "    if 'absent gene product' in x:\n",
+    "        return 'PASS'\n",
+    "    else:\n",
+    "        return '.'\n",
+    "\n",
+    "def extract_definitive(x):\n",
+    "    if x == 'definitive':\n",
+    "        return 'PASS'\n",
+    "    else:\n",
+    "        return '.'\n",
+    "\n",
+    "def extract_strong(x):\n",
+    "    if (x == 'definitive' or x == 'strong'):\n",
+    "        return 'PASS'\n",
+    "    else:\n",
+    "        return '.'\n",
+    "\n",
+    "def extract_moderate(x):\n",
+    "    if (x == 'definitive' or x == 'strong' or x == 'moderate'):\n",
+    "        return 'PASS'\n",
+    "    else:\n",
+    "        return '.'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,6 +60,14 @@
     "hi_path = 'ClinGen_haploinsufficiency_gene_GRCh37.bed'\n",
     "gnomad_path = 'gnomad.v2.1.1.lof_metrics.by_gene.txt.gz'\n",
     "phaplo_path = 'Collins_rCNV_2022.dosage_sensitivity_scores.tsv.gz'\n",
+    "\n",
+    "# G2P data\n",
+    "dd = './DDG2P.csv.gz'\n",
+    "eye = './EyeG2P.csv.gz'\n",
+    "skin = './SkinG2P.csv.gz'\n",
+    "cancer = './CancerG2P.csv.gz'\n",
+    "cardiac = './CardiacG2P.csv.gz'\n",
+    "skeletal = './SkeletalG2P.csv.gz'\n",
     "\n",
     "# Validation set\n",
     "am_path = 'AlphaMissense_gene_hg19.tsv.gz'\n",
@@ -61,15 +108,125 @@
     "    )\n",
     "\n",
     "am = pd.read_csv(am_path, sep='\\t', compression='gzip', skiprows=3)\n",
-    "am['transcript'] = am['transcript_id'].str.split('.').str[0]\n",
+    "am['enstID'] = am['transcript_id'].str.split('.').str[0]\n",
     "am['version'] = am['transcript_id'].str.split('.').str[1]\n",
     "am.drop(columns=['transcript_id'], inplace=True)\n",
-    "am = am[['transcript', 'version', 'mean_am_pathogenicity']]\n"
+    "am = am[['enstID', 'version', 'mean_am_pathogenicity']]\n",
+    "\n",
+    "dddf = pd.read_csv(dd, sep=',', header=0, compression='infer')\n",
+    "eyedf = pd.read_csv(eye, sep=',', header=0, compression='infer')\n",
+    "skidf = pd.read_csv(skin, sep=',', header=0, compression='infer')\n",
+    "candf = pd.read_csv(cancer, sep=',', header=0, compression='infer')\n",
+    "cardf = pd.read_csv(cardiac, sep=',', header=0, compression='infer')\n",
+    "skedf = pd.read_csv(skeletal, sep=',', header=0, compression='infer')\n",
+    "dfs = [dddf, eyedf, skidf, candf, cardf, skedf]\n",
+    "\n",
+    "\n",
+    "rename_cols = {\n",
+    "    'gene symbol': 'gene',\n",
+    "    'prev symbols': 'prev_symbols', \n",
+    "    'hgnc id': 'hgnc_id',\n",
+    "    'gene mim': 'gene_mim', \n",
+    "    'mutation consequence': 'mutation_consequence',\n",
+    "    'confidence category': 'confidence_category',\n",
+    "    'allelic requirement': 'allelic_requirement', \n",
+    "    'disease name': 'disease_name'\n",
+    "    }\n",
+    "\n",
+    "pickup_cols = [\n",
+    "    'gene', 'prev_symbols', 'hgnc_id',  \n",
+    "    'mutation_consequence', 'confidence_category', \n",
+    "    'allelic_requirement', 'panel', 'disease_name', \n",
+    "    'g2pLoF', 'definitiveFILTER', 'strongFILTER','moderateFILTER'\n",
+    "    ]\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for df in dfs:\n",
+    "    df['g2pLoF'] = df['mutation consequence'].apply(extract_g2pLoF_genes)\n",
+    "\n",
+    "for df in dfs:\n",
+    "    df['definitiveFILTER'] = df['confidence category'].apply(extract_definitive)\n",
+    "    df['strongFILTER'] = df['confidence category'].apply(extract_strong)\n",
+    "    df['moderateFILTER'] = df['confidence category'].apply(extract_moderate)\n",
+    "\n",
+    "### Rename columns\n",
+    "dddf = dddf.rename(columns=rename_cols)\n",
+    "eyedf = eyedf.rename(columns=rename_cols)\n",
+    "skidf = skidf.rename(columns=rename_cols)\n",
+    "candf = candf.rename(columns=rename_cols)\n",
+    "cardf = cardf.rename(columns=rename_cols)\n",
+    "skedf = skedf.rename(columns=rename_cols)\n",
+    "\n",
+    "### Extract columns for analysis\n",
+    "dddf = dddf[pickup_cols]\n",
+    "eyedf = eyedf[pickup_cols]\n",
+    "skidf = skidf[pickup_cols]\n",
+    "candf = candf[pickup_cols]\n",
+    "cardf = cardf[pickup_cols]\n",
+    "skedf = skedf[pickup_cols]\n",
+    "\n",
+    "### Extract LoF genes\n",
+    "lof_dd = dddf[dddf['g2pLoF'] == 'PASS']\n",
+    "lof_eye = eyedf[eyedf['g2pLoF'] == 'PASS']\n",
+    "lof_ski = skidf[skidf['g2pLoF'] == 'PASS']\n",
+    "lof_can = candf[candf['g2pLoF'] == 'PASS']\n",
+    "lof_car = cardf[cardf['g2pLoF'] == 'PASS']\n",
+    "lof_ske = skedf[skedf['g2pLoF'] == 'PASS']\n",
+    "\n",
+    "\n",
+    "### Concatnate dataframes\n",
+    "alldf = pd.concat([lof_dd, lof_eye, lof_ski, lof_can, lof_car, lof_ske])\n",
+    "alldf.fillna(value='.', inplace=True)\n",
+    "\n",
+    "### Extract genes with strong evidence\n",
+    "alldf_filterd = alldf[alldf['strongFILTER'] == 'PASS']\n",
+    "alldf_filterd = alldf_filterd.drop_duplicates(subset='gene')\n",
+    "\n",
+    "# Gene lists from 4 sources\n",
+    "ajhg_genes = ajhg['gene']\n",
+    "dcpr_genes = alldf_filterd['gene']\n",
+    "hi_genes = hi['gene']\n",
+    "phaplo_genes = phaplo['gene']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +241,7 @@
       "2  AASS  NM_005763.3\n",
       "1043\n",
       "\n",
-      "--- Gnomad ---\n",
+      "--- gnomAD ---\n",
       "    gene       transcript  pLI  oe_lof_upper  cds_length\n",
       "0  MED13  ENST00000397786  1.0         0.030        6522\n",
       "1  NIPBL  ENST00000282516  1.0         0.032        8412\n",
@@ -126,7 +283,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -135,10 +299,10 @@
      "text": [
       "Validation set\n",
       "--- AlphaMissense ---\n",
-      "       transcript_id  mean_am_pathogenicity\n",
-      "0  ENST00000000233.5               0.742270\n",
-      "1  ENST00000000412.3               0.378343\n",
-      "2  ENST00000001008.4               0.422290\n",
+      "            enstID version  mean_am_pathogenicity\n",
+      "0  ENST00000000233       5               0.742270\n",
+      "1  ENST00000000412       3               0.378343\n",
+      "2  ENST00000001008       4               0.422290\n",
       "18761\n",
       "\n",
       "--- Gnocchi ---\n",
@@ -161,7 +325,7 @@
     "print('Validation set')\n",
     "print('--- AlphaMissense ---')\n",
     "print(am.head(3))\n",
-    "print(am['transcript_id'].nunique())\n",
+    "print(am['enstID'].nunique())\n",
     "print('\\n--- Gnocchi ---')\n",
     "print(gnocchi.head(3))\n",
     "print(gnocchi['gene'].nunique())\n",
@@ -169,6 +333,52 @@
     "print(genovo.head(3))\n",
     "print(genovo['enstID'].nunique())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "--- AlphaMissense + Genovo ---\n",
+      "            enstID version  mean_am_pathogenicity  enstVersion  \\\n",
+      "0  ENST00000000233       5               0.742270            5   \n",
+      "1  ENST00000000412       3               0.378343            3   \n",
+      "2  ENST00000001008       4               0.422290            4   \n",
+      "\n",
+      "   genovo_LOEUF_corrected  \n",
+      "0                0.109528  \n",
+      "1                0.787049  \n",
+      "2                0.524644  \n",
+      "16355\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Merge AlphaMissense and Genovo data by enstID\n",
+    "am_genovo = pd.merge(am, genovo, on='enstID', how='inner')\n",
+    "print('\\n--- AlphaMissense + Genovo ---')\n",
+    "print(am_genovo.head(3))\n",
+    "print(am_genovo['enstID'].nunique())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
