--- a/ValidationData/mydata/analysis_mydata_variants_latest.ipynb
+++ b/ValidationData/mydata/analysis_mydata_variants_latest.ipynb
@@ -362,14 +362,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024/03/27 04:52:23 [INFO   ] (__main__) - Annotating Screening scores...\n",
+      "2024/04/03 10:46:51 [INFO   ] (__main__) - Annotating Screening scores...\n",
       "16353\n",
       "9944\n"
      ]
@@ -378,9 +378,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/b_/1qjd6n853xbbctck9_20_nt40000gn/T/ipykernel_70511/3130647318.py:16: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
+      "/var/folders/b_/1qjd6n853xbbctck9_20_nt40000gn/T/ipykernel_5110/3130647318.py:16: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
       "  df['insilico_screening'] = df.parallel_apply(scoring.insilico_screening, axis=1)\n",
-      "/var/folders/b_/1qjd6n853xbbctck9_20_nt40000gn/T/ipykernel_70511/3130647318.py:17: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
+      "/var/folders/b_/1qjd6n853xbbctck9_20_nt40000gn/T/ipykernel_5110/3130647318.py:17: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
       "  df['clinvar_screening'] = df.parallel_apply(scoring.clinvar_screening, axis=1)\n",
       "/Volumes/vol/work/Github/dev/ValidationData/mydata/../../libs/scoring.py:85: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
       "  df['PriorityScore'] = df['insilico_screening'] + df['clinvar_screening']\n"
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,14 +419,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/b_/1qjd6n853xbbctck9_20_nt40000gn/T/ipykernel_70511/1655380308.py:3: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '.' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
+      "/var/folders/b_/1qjd6n853xbbctck9_20_nt40000gn/T/ipykernel_5110/1655380308.py:3: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '.' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
       "  df.fillna('.', inplace=True)\n"
      ]
     },
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -20512,10 +20512,7 @@
     "# Distribution of Priority scores (Solved cases vs. Unsolved cases)\n",
     "fig = px.histogram(df, x='PriorityScore', color='State', marginal='box', nbins=100)\n",
     "fig.update_layout(title='Distribution of Priority scores (Solved cases vs. Unsolved cases)')\n",
-    "fig.show()\n",
-    "\n",
-    "\n",
-    "\n"
+    "fig.show()\n"
    ]
   },
   {
@@ -25963,7 +25960,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.9.undefined"
   },
   "orig_nbformat": 4
  },
