--- a/Resources/02_EstimatedLoFGenes/comparison.ipynb
+++ b/Resources/02_EstimatedLoFGenes/comparison.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -230,12 +230,13 @@
     "print('DCPR:', len(dcpr_genes))\n",
     "print('HI:', len(hi_genes))\n",
     "print('phaplo:', len(gnomad_genes))\n",
-    "\n"
+    "\n",
+    "all_genes = pd.DataFrame(all_genes_set, columns=['gene'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -271,21 +272,168 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cutoff: 0\n",
+      "0.949203160139212 (0.7315164672715094 - 1.2316696609426518) p=0.6418057978054665\n",
+      "cutoff: 1\n",
+      "1.0262789018076026 (0.8731173429562493 - 1.2063079410715538) p=0.7017626764415166\n",
+      "cutoff: 2\n",
+      "1.0451217143585025 (0.9341839181517936 - 1.1692337842687774) p=0.3206567689409894\n",
+      "cutoff: 3\n",
+      "1.0415078033653602 (0.9382921642698456 - 1.156077547887286) p=0.324542032464021\n",
+      "cutoff: 4\n",
+      "1.090653887721789 (0.9486519476985136 - 1.2539118331950025) p=0.11459030730454006\n",
+      "cutoff: 5\n",
+      "1.3500558075806663 (1.0873128506120024 - 1.6762891035053915) p=0.000393027784638199\n",
+      "cutoff: 6\n",
+      "1.5231868611363457 (1.0548952386707935 - 2.199363622933593) p=0.003764209514983665\n",
+      "cutoff: 7\n",
+      "1.4082602967291058 (0.7165688163074905 - 2.7676295956654213) p=0.24183173417628465\n"
+     ]
+    }
+   ],
    "source": [
-    "gnocchi['in_analysis'] = gnocchi['gene'].apply(lambda x: True if x in all_genes['gene'].values else False)"
+    "gnocchi['in_analysis'] = gnocchi['gene'].apply(lambda x: True if x in all_genes['gene'].values else False)\n",
+    "gnocchi['is_eLoF'] = gnocchi['gene'].apply(lambda x: True if x in elofs else False)\n",
+    "\n",
+    "# constrained かどうかのオッズ比の比較\n",
+    "# 区間推定を行う 95% CI\n",
+    "from scipy.stats import chi2_contingency\n",
+    "from scipy.stats import fisher_exact\n",
+    "from scipy.stats import chi2\n",
+    "import numpy as np\n",
+    "\n",
+    "def odds_ratio(a, b, c, d):\n",
+    "    return (a * d) / (b * c)\n",
+    "\n",
+    "def odds_ratio_ci(a, b, c, d, alpha=0.05):\n",
+    "    odds = odds_ratio(a, b, c, d)\n",
+    "    log_odds = np.log(odds)\n",
+    "    se = np.sqrt(1/a + 1/b + 1/c + 1/d)\n",
+    "    # ci = np.exp(log_odds - 1.96 * se), np.exp(log_odds + 1.96 * se)\n",
+    "    # z = chi2.ppf(1-alpha/2, 1)\n",
+    "    # print(z)\n",
+    "    z = 2.58\n",
+    "    ci = np.exp(log_odds - z * se), np.exp(log_odds + z * se)\n",
+    "    return ci\n",
+    "\n",
+    "def fisher_exact_test(a, b, c, d):\n",
+    "    return fisher_exact([[a, b], [c, d]])\n",
+    "\n",
+    "def chi2_test(a, b, c, d):\n",
+    "    return chi2_contingency([[a, b], [c, d]])\n",
+    "\n",
+    "def chi2_test_pvalue(a, b, c, d):\n",
+    "    return chi2_contingency([[a, b], [c, d]])[1]\n",
+    "\n",
+    "def chi2_test_oddsratio(a, b, c, d):\n",
+    "    return chi2_contingency([[a, b], [c, d]])[0]\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "for cutoff in [0, 1, 2, 3, 4, 5, 6, 7]:\n",
+    "    gnocchi['is_constrained'] = gnocchi['enhancer_Gnocchi'].apply(lambda x: True if x >= cutoff else False)\n",
+    "    a = sum(gnocchi['is_constrained'] & gnocchi['is_eLoF'])\n",
+    "    b = sum(gnocchi['is_constrained'] & ~gnocchi['is_eLoF'])\n",
+    "    c = sum(~gnocchi['is_constrained'] & gnocchi['is_eLoF'])\n",
+    "    d = sum(~gnocchi['is_constrained'] & ~gnocchi['is_eLoF'])\n",
+    "\n",
+    "    # print(a, b, c, d)\n",
+    "    # odds ratio\n",
+    "    print(\"cutoff:\", cutoff)\n",
+    "    # print(\"odds ratio (CI)\")\n",
+    "    print(f\"{odds_ratio(a, b, c, d)} ({odds_ratio_ci(a, b, c, d)[0]} - {odds_ratio_ci(a, b, c, d)[1]}) p={chi2_test_pvalue(a, b, c, d)}\")\n",
+    "    # # 95% CI\n",
+    "    # print(\"95% CI\")\n",
+    "    # print(odds_ratio_ci(a, b, c, d))\n",
+    "    # Fisher exact test\n",
+    "    # print(\"Fisher exact test\")\n",
+    "    # print(fisher_exact_test(a, b, c, d))\n",
+    "    # print(chi2_test(a, b, c, d))\n",
+    "    # print(chi2_test_pvalue(a, b, c, d))\n",
+    "    # print(chi2_test_oddsratio(a, b, c, d))\n",
+    "\n",
+    "# 95% CI 1.5 - 2.5\n",
+    "# Fisher exact test pvalue < 0.05\n",
+    "# Chi2 test pvalue < 0.05\n",
+    "# Chi2 test OR > 1.5\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'DataFrame' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[36], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mcontingency\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'DataFrame' object is not callable"
+     ]
+    }
+   ],
    "source": [
-    "gnocchi['is_constrained'] = gnocchi['enhancer_Gnocchi'].apply(lambda x: True if x >= 4 else False)\n",
-    "gnocchi['is_eLoF'] = gnocchi['gene'].apply(lambda x: True if x in elofs else False)"
+    "contingency"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.4082602967291058 (0.8428899903883436, 2.3528539737787533)\n"
+     ]
+    }
+   ],
+   "source": [
+    "def calc_odds_ratio(a: int, b: int, c: int, d: int, z: float) -> tuple:\n",
+    "    odds_ratio = (a * d) / (b * c)\n",
+    "    log_odds = np.log(odds_ratio)\n",
+    "    se = np.sqrt(1/a + 1/b + 1/c + 1/d)\n",
+    "    ci: tuple = np.exp(log_odds - z * se), np.exp(log_odds + z * se)\n",
+    "    return odds_ratio, ci\n",
+    "    \n",
+    "    \n",
+    "\n",
+    "def odds_ratio_ci(a, b, c, d, alpha=0.05):\n",
+    "    odds = odds_ratio(a, b, c, d)\n",
+    "    log_odds = np.log(odds)\n",
+    "    se = np.sqrt(1/a + 1/b + 1/c + 1/d)\n",
+    "    ci = np.exp(log_odds - 1.96 * se), np.exp(log_odds + 1.96 * se)\n",
+    "    # z = chi2.ppf(1-alpha/2, 1)\n",
+    "    # ci = np.exp(log_odds - z * se), np.exp(log_odds + z * se)\n",
+    "    return ci\n",
+    "\n",
+    "def fisher_exact_test(a, b, c, d):\n",
+    "    return fisher_exact([[a, b], [c, d]])\n",
+    "\n",
+    "def chi2_test(a, b, c, d):\n",
+    "    return chi2_contingency([[a, b], [c, d]])\n",
+    "\n",
+    "def chi2_test_pvalue(a, b, c, d):\n",
+    "    return chi2_contingency([[a, b], [c, d]])[1]\n",
+    "\n",
+    "def chi2_test_oddsratio(a, b, c, d):\n",
+    "    return chi2_contingency([[a, b], [c, d]])[0]\n",
+    "\n",
+    "\n",
+    "odds_ratio, ci = calc_odds_ratio(a, b, c, d, 1.96)\n",
+    "print(odds_ratio, ci)"
    ]
   },
   {
