--- a/ValidationData/mydata/analysis_mydata_variants_latest.ipynb
+++ b/ValidationData/mydata/analysis_mydata_variants_latest.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -461,14 +461,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024/04/22 02:17:59 [INFO   ] (__main__) - Annotating Screening scores...\n",
+      "2024/05/02 06:17:31 [INFO   ] (__main__) - Annotating Screening scores...\n",
       "9944\n",
       "9944\n"
      ]
@@ -477,7 +477,7 @@
    "source": [
     "#10.   Scoring\n",
     "df = pd.read_pickle('./pickles/mydata_prescore.pkl')\n",
-    "from libs import scoring\n",
+    "from libs.scoring import Scoring\n",
     "logger.info('Annotating Screening scores...')\n",
     "df = df.astype({'maxsplai': 'float', 'vqslod': 'float', \n",
     "                'denovogear': float, 'triodenovo': float, 'dnmfilter': float})\n",
@@ -490,6 +490,40 @@
     "       | (df['dnmfilter'] > 0.196)]\n",
     "\n",
     "print(len(df))\n",
+    "\n",
+    "sccore_ths = {'clinvar_same_pos': 2,     \n",
+    "              'clinvar_same_motif': 1,\n",
+    "              'clinvar_else': 0,\n",
+    "              'non_canon_splai_lte_0.1_outside': 0,\n",
+    "              'non_canon_splai_lte_0.1_other': 1,\n",
+    "              'non_canon_splai_bet_0.1_0.2': 2,\n",
+    "              'non_canon_splai_gte_0.2': 3,\n",
+    "              'canon_moderate': 3, \n",
+    "              'canon_strong': 4, \n",
+    "              'frameshift_nmd_eloF': 5, \n",
+    "              'frameshift_nmd_not_eloF': 2,\n",
+    "              'canon_splai_lte_0.1': -2,\n",
+    "              'canon_splai_bet_0.1_0.2': -1,\n",
+    "              'canon_splai_gte_0.2': 2}\n",
+    "\n",
+    "sccore_ths = {'clinvar_same_pos': 2,     \n",
+    "                 'clinvar_same_motif': 1,\n",
+    "                 'clinvar_else': 0,\n",
+    "                 'non_canon_splai_lte_0.1_outside': -2,\n",
+    "                 'non_canon_splai_lte_0.1_other': 1,\n",
+    "                 'non_canon_splai_bet_0.1_0.2': 2,\n",
+    "                 'non_canon_splai_gte_0.2': 3,\n",
+    "                 'canon_moderate': 3, \n",
+    "                 'canon_strong': 4, \n",
+    "                 'frameshift_nmd_eloF': 5, \n",
+    "                 'frameshift_nmd_not_eloF': 2,\n",
+    "                 'canon_splai_lte_0.1': -2,\n",
+    "                 'canon_splai_bet_0.1_0.2': -1,\n",
+    "                 'canon_splai_gte_0.2': 2}\n",
+    "\n",
+    "\n",
+    "scoring = Scoring(ths=sccore_ths)\n",
+    "\n",
     "df['insilico_screening'] = df.parallel_apply(scoring.insilico_screening, axis=1)\n",
     "df['clinvar_screening'] = df.parallel_apply(scoring.clinvar_screening, axis=1)\n",
     "df = scoring.calc_priority_score(df)"
@@ -506,14 +540,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/b_/1qjd6n853xbbctck9_20_nt40000gn/T/ipykernel_72082/1655380308.py:3: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '.' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
+      "/var/folders/b_/1qjd6n853xbbctck9_20_nt40000gn/T/ipykernel_18553/608533788.py:3: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '.' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
       "  df.fillna('.', inplace=True)\n"
      ]
     },
@@ -527,7 +561,7 @@
     }
    ],
    "source": [
-    "df = pd.read_pickle(f'./pickles/mydata.scored.pickle')\n",
+    "# df = pd.read_pickle(f'./pickles/mydata.scored.pickle')\n",
     "df.replace({'\\u2161': 'II', '\\u2163': 'IV', '\\u2162': 'III'}, inplace=True, regex=True)\n",
     "df.fillna('.', inplace=True)\n",
     "df.rename(columns={'gene_x': 'gene', 'ID_x': 'ID'}, inplace=True)\n",
@@ -553,40 +587,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.to_csv(f'./ExcelOutput/mydata.denovo.final.tsv', sep='\\t', index=False, encoding='shift-jis')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.loc[df['Identified_Gene'] != '.', 'State'] = 'Identified'\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2456 + 7065\n"
+      "2456 + 7065\n",
+      "112\n"
      ]
     }
    ],
    "source": [
+    "df.loc[df['Identified_Gene'] != '.', 'State'] = 'Identified'\n",
     "df_solved = df[df['State'] == 'Identified']\n",
     "df_unsolved = df[df['State'] == 'Undetermined']\n",
     "\n",
-    "print(f\"{len(df_solved)} + {len(df_unsolved)}\")"
+    "print(f\"{len(df_solved)} + {len(df_unsolved)}\")\n",
+    "print(len(df_unsolved[df_unsolved['PriorityScore'] >= 4]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv(f'./ExcelOutput/mydata.denovo.final.tsv', sep='\\t', index=False, encoding='shift-jis')\n",
+    "df_unsolved.to_excel(f'./ExcelOutput/Calibrated_MAX_mydata.denovo.unsolved.xlsx', index=False)"
    ]
   },
   {
@@ -594,16 +623,27 @@
    "execution_count": 25,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "df_unsolved.to_excel(f'./ExcelOutput/mydata.denovo.unsolved.xlsx', index=False)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "112"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(df_unsolved[df_unsolved['PriorityScore'] >= 4])"
+   ]
   },
   {
    "cell_type": "code",
