--- a/ValidationData/mydata/analysis_mydata_variants_latest.ipynb
+++ b/ValidationData/mydata/analysis_mydata_variants_latest.ipynb
@@ -461,16 +461,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024/05/02 06:17:31 [INFO   ] (__main__) - Annotating Screening scores...\n",
+      "2024/05/04 01:53:48 [INFO   ] (__main__) - Annotating Screening scores...\n",
       "9944\n",
-      "9944\n"
+      "6329\n"
      ]
     }
    ],
@@ -486,25 +486,30 @@
     "# Recalibrate the thresholds for De novo detection\n",
     "df = df[df['vqslod'] > -7.18]\n",
     "df =df[(df['denovogear'] > 0.02) \n",
-    "       | (df['triodenovo'] > 5.72)\n",
-    "       | (df['dnmfilter'] > 0.196)]\n",
+    "       & (df['triodenovo'] > 5.72)\n",
+    "       & (df['dnmfilter'] > 0.196)]\n",
+    "\n",
+    "# df = df[df['vqslod'] > -7.18]\n",
+    "# df =df[(df['denovogear'] > 0.02) \n",
+    "#        | (df['triodenovo'] > 5.72)\n",
+    "#        | (df['dnmfilter'] > 0.196)]\n",
     "\n",
     "print(len(df))\n",
     "\n",
-    "sccore_ths = {'clinvar_same_pos': 2,     \n",
-    "              'clinvar_same_motif': 1,\n",
-    "              'clinvar_else': 0,\n",
-    "              'non_canon_splai_lte_0.1_outside': 0,\n",
-    "              'non_canon_splai_lte_0.1_other': 1,\n",
-    "              'non_canon_splai_bet_0.1_0.2': 2,\n",
-    "              'non_canon_splai_gte_0.2': 3,\n",
-    "              'canon_moderate': 3, \n",
-    "              'canon_strong': 4, \n",
-    "              'frameshift_nmd_eloF': 5, \n",
-    "              'frameshift_nmd_not_eloF': 2,\n",
-    "              'canon_splai_lte_0.1': -2,\n",
-    "              'canon_splai_bet_0.1_0.2': -1,\n",
-    "              'canon_splai_gte_0.2': 2}\n",
+    "# sccore_ths = {'clinvar_same_pos': 2,     \n",
+    "#               'clinvar_same_motif': 1,\n",
+    "#               'clinvar_else': 0,\n",
+    "#               'non_canon_splai_lte_0.1_outside': 0,\n",
+    "#               'non_canon_splai_lte_0.1_other': 1,\n",
+    "#               'non_canon_splai_bet_0.1_0.2': 2,\n",
+    "#               'non_canon_splai_gte_0.2': 3,\n",
+    "#               'canon_moderate': 3, \n",
+    "#               'canon_strong': 4, \n",
+    "#               'frameshift_nmd_eloF': 5, \n",
+    "#               'frameshift_nmd_not_eloF': 2,\n",
+    "#               'canon_splai_lte_0.1': -2,\n",
+    "#               'canon_splai_bet_0.1_0.2': -1,\n",
+    "#               'canon_splai_gte_0.2': 2}\n",
     "\n",
     "sccore_ths = {'clinvar_same_pos': 2,     \n",
     "                 'clinvar_same_motif': 1,\n",
@@ -540,14 +545,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/b_/1qjd6n853xbbctck9_20_nt40000gn/T/ipykernel_18553/608533788.py:3: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '.' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
+      "/var/folders/b_/1qjd6n853xbbctck9_20_nt40000gn/T/ipykernel_51119/1852667553.py:3: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '.' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
       "  df.fillna('.', inplace=True)\n"
      ]
     },
@@ -555,8 +560,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "423\n",
-      "9521\n"
+      "265\n",
+      "6064\n",
+      "1501 + 4563\n"
      ]
     }
    ],
@@ -565,7 +571,7 @@
     "df.replace({'\\u2161': 'II', '\\u2163': 'IV', '\\u2162': 'III'}, inplace=True, regex=True)\n",
     "df.fillna('.', inplace=True)\n",
     "df.rename(columns={'gene_x': 'gene', 'ID_x': 'ID'}, inplace=True)\n",
-    "path_to_hgmd = '../../Resources/07_HGMD_GeneBasedInfo/HGMD_GeneBasedInfo_2023.4.tsv.gz'\n",
+    "path_to_hgmd = '../../Resources/07_HGMD_GeneBasedInfo/HGMD_GeneBasedInfo_2024.1.tsv.gz'\n",
     "\n",
     "def anno_hgmd(df: pd.DataFrame) -> pd.DataFrame:\n",
     "    hgmd = pd.read_table(path_to_hgmd, header=0, dtype=str)\n",
@@ -582,39 +588,23 @@
     "df = df.drop(columns=['gene_y', 'ID_y'])\n",
     "print(df.duplicated(subset=['sample', 'ID']).sum())\n",
     "df.drop_duplicates(subset=['sample', 'ID'], inplace=True)\n",
-    "print(len(df))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2456 + 7065\n",
-      "112\n"
-     ]
-    }
-   ],
-   "source": [
+    "print(len(df))\n",
+    "\n",
     "df.loc[df['Identified_Gene'] != '.', 'State'] = 'Identified'\n",
     "df_solved = df[df['State'] == 'Identified']\n",
     "df_unsolved = df[df['State'] == 'Undetermined']\n",
     "\n",
-    "print(f\"{len(df_solved)} + {len(df_unsolved)}\")\n",
-    "print(len(df_unsolved[df_unsolved['PriorityScore'] >= 4]))"
+    "print(f\"{len(df_solved)} + {len(df_unsolved)}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "df.to_csv(f'./ExcelOutput/mydata.denovo.final.tsv', sep='\\t', index=False, encoding='shift-jis')\n",
+    "df.to_excel(f'./ExcelOutput/HardFilter_mydata.denovo.final.xlsx', index=False)\n",
     "df_unsolved.to_excel(f'./ExcelOutput/Calibrated_MAX_mydata.denovo.unsolved.xlsx', index=False)"
    ]
   },
@@ -16490,7 +16480,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.19"
+   "version": "3.9.18"
   },
   "orig_nbformat": 4
  },
