--- a/ValidationData/mydata/analysis_mydata_variants_latest.ipynb
+++ b/ValidationData/mydata/analysis_mydata_variants_latest.ipynb
@@ -485,9 +485,9 @@
     "\n",
     "# Recalibrate the thresholds for De novo detection\n",
     "df = df[df['vqslod'] > -7.18]\n",
-    "df =df[(df['denovogear'] > 0.02) \n",
-    "       & (df['triodenovo'] > 5.72)\n",
-    "       & (df['dnmfilter'] > 0.196)]\n",
+    "df = df[((df['denovogear'] > 0.02) | (df['denovogear'] == '.'))\n",
+    "        & ((df['triodenovo'] > 5.72) | (df['triodenovo'] == '.'))\n",
+    "        & ((df['dnmfilter'] > 0.196) | (df['dnmfilter'] == '.'))]\n",
     "\n",
     "# df = df[df['vqslod'] > -7.18]\n",
     "# df =df[(df['denovogear'] > 0.02) \n",
